# malaysia-salary-calculator

./: .gitignore  README.md  installer.iss  prompt.md  pyproject.toml
.github/workflows/: build.yml
scripts/: build_installer.ps1
src/: main.py
src/core/: config_loader.py  eis_calculator.py  epf_calculator.py  helper.py  pcb_calculator.py  salary_calculator.py  socso_calculator.py  update_checker.py
src/data/: config.json  eis_contribution.json  epf_contribution_rates.json  income_tax_bracket_2025.json  socso_contribution.json
src/ui/: main_window.py  theme_manager.py
