[project]
name = "salary_calculator"
version = "0.1.3"
description = "Salary, Statutory, and PCB Calculator for Malaysia"
dependencies = [
    "pillow>=12.3.0",
    "PySide6>=6.7.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
